--- a/fama_french.ipynb
+++ b/fama_french.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "4  0.0000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,129 +140,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = []\n",
-    "f_m = [1]\n",
-    "f_smb = [1]\n",
-    "f_hml = [1]\n",
-    "for i in range(5):\n",
-    "    r.append(df['gm'][i])\n",
-    "    f_m.append(df['mkt_rf'][i])\n",
-    "    f_smb.append(df['smb'][i])\n",
-    "    f_hml.append(df['hml'][i])\n"
+    "r_f = df['rf'].values\n",
+    "r_gm = df['gm'].values - r_f\n",
+    "r_adbe = df['adbe'].values - r_f\n",
+    "r_ora = df['ora'].values - r_f\n",
+    "r_flo = df['flo'].values - r_f\n",
+    "f_m = df['mkt_rf'].values - r_f\n",
+    "f_smb = df['smb'].values - r_f\n",
+    "f_hml = df['hml'].values - r_f\n",
+    "\n",
+    "vector_1 = [1]*len(f_m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R = np.matrix([r_gm, r_adbe, r_ora, r_flo])\n",
+    "R = np.transpose(R)\n",
+    "F = np.matrix([vector_1, f_m, f_smb, f_hml])\n",
+    "F = np.transpose(F)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "r_gm = np.array([r])\n",
-    "F = np.array([f_m,f_smb,f_hml])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 1.    , -0.0176,  0.0078,  0.0118,  0.0557,  0.0129],\n",
-       "       [ 1.    , -0.0116,  0.0064,  0.015 ,  0.0033, -0.0028],\n",
-       "       [ 1.    ,  0.0359, -0.0084,  0.0351,  0.0096,  0.0011]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "F"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x1 = np.dot(np.transpose(F), F)\n",
-    "x2 = np.linalg.inv(x1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "shapes (6,3) and (1,5) not aligned: 3 (dim 1) != 1 (dim 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/roofernando/Desktop/CFRM_HW_6/fama_french.ipynb Cell 7\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/roofernando/Desktop/CFRM_HW_6/fama_french.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m x3 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdot(x2, np\u001b[39m.\u001b[39mtranspose(F))\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/roofernando/Desktop/CFRM_HW_6/fama_french.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m x4 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mdot(x3,r_gm)\n",
-      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mdot\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: shapes (6,3) and (1,5) not aligned: 3 (dim 1) != 1 (dim 0)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.06497959e-03  8.49300414e-03  1.07187588e-02  5.13442760e-03]\n",
+      " [ 1.18352022e+00  1.20099540e+00  5.88364414e-01  4.79204767e-01]\n",
+      " [ 7.19675225e-01 -2.50482193e-01  4.17367996e-01 -2.73426048e-01]\n",
+      " [ 6.58089536e-01 -5.57412709e-01 -2.28104966e-01  2.54813640e-01]]\n"
      ]
     }
    ],
    "source": [
+    "x1 = np.dot(np.transpose(F), F)\n",
+    "x2 = np.linalg.inv(x1)\n",
     "x3 = np.dot(x2, np.transpose(F))\n",
-    "x4 = np.dot(x3,r_gm)"
+    "B = np.dot(x3,R)\n",
+    "print(B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample = {'sample':['alpha', 'beta_1', 'beta_2', 'beta_3'], 'r_gm':[], 'r_adbe':[], 'r_ora':[], 'r_flo':[]}\n",
+    "v = np.array(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            r_gm    r_adbe     r_ora     r_flo\n",
+      "sample                                        \n",
+      "alpha  -0.001065  0.008493  0.010719  0.005134\n",
+      "beta_1  1.183520  1.200995  0.588364  0.479205\n",
+      "beta_2  0.719675 -0.250482  0.417368 -0.273426\n",
+      "beta_3  0.658090 -0.557413 -0.228105  0.254814\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(v)):\n",
+    "    sample['r_gm'].append(v[i][0])\n",
+    "    sample['r_adbe'].append(v[i][1])\n",
+    "    sample['r_ora'].append(v[i][2])\n",
+    "    sample['r_flo'].append(v[i][3])\n",
+    "sample = pd.DataFrame.from_dict(sample)\n",
+    "sample = sample.set_index('sample')\n",
+    "print(sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E_hat = np.array(R) - np.dot(np.array(F),np.array(B))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr_matrix_e = np.zeros((4,4))\n",
+    "corr_matrix_r = np.zeros((4,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = np.transpose(E_hat)\n",
+    "excess = {'e_gm':alpha[0], 'e_adbe':alpha[1], 'e_ora':alpha[2], 'e_flo':alpha[3]}\n",
+    "dh = pd.DataFrame.from_dict(excess)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dh['e_gm'].corr(dh['e_gm']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#excess correlation matrix\n",
+    "l ='e_gm'\n",
+    "i =0\n",
+    "corr_matrix_e[i][0] = dh[l].corr(dh['e_gm'])\n",
+    "corr_matrix_e[i][1] = dh[l].corr(dh['e_adbe'])\n",
+    "corr_matrix_e[i][2] = dh[l].corr(dh['e_ora'])\n",
+    "corr_matrix_e[i][3] = dh[l].corr(dh['e_flo'])\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.          0.12806569  0.23815364  0.00887715]\n",
+      " [ 0.12806569  1.         -0.14176432  0.05151016]\n",
+      " [ 0.23815364 -0.14176432  1.          0.10913091]\n",
+      " [ 0.00887715  0.05151016  0.10913091  1.        ]]\n",
+      "[[1.         0.40860882 0.37872461 0.19889243]\n",
+      " [0.40860882 1.         0.16271006 0.19446945]\n",
+      " [0.37872461 0.16271006 1.         0.16870395]\n",
+      " [0.19889243 0.19446945 0.16870395 1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(corr_matrix_e)\n",
+    "print(corr_matrix_r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#excess correlation matrix\n",
+    "l ='flo'\n",
+    "i = 3\n",
+    "corr_matrix_r[i][0] = df[l].corr(df['gm'])\n",
+    "corr_matrix_r[i][1] = df[l].corr(df['adbe'])\n",
+    "corr_matrix_r[i][2] = df[l].corr(df['ora'])\n",
+    "corr_matrix_r[i][3] = df[l].corr(df['flo'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.12087893,  0.01490208,  0.1139877 , -0.02566755, -0.03346422]])"
+       "array([ 0.12765282,  0.07870291,  0.02757861, -0.0333552 ])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r_gm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  -0.58506332,   -0.72292468,    2.5678294 ],\n",
-       "       [ 152.14037919,  123.81296224, -147.21614892],\n",
-       "       [ 478.01522511,  531.88535247, -526.46216682],\n",
-       "       [  -9.9032    ,   24.83073333,  -42.97963333],\n",
-       "       [  15.4516    ,   -6.54036667,    3.30231667],\n",
-       "       [   8.        ,  -42.        ,   21.        ]])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x3"
+    "E_hat[0]"
    ]
   },
   {
