most of part c done

--- a/fama_french.ipynb
+++ b/fama_french.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "4  0.0000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,21 +296,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.          0.12806569  0.23815364  0.00887715]\n",
-      " [ 0.12806569  1.         -0.14176432  0.05151016]\n",
-      " [ 0.23815364 -0.14176432  1.          0.10913091]\n",
-      " [ 0.00887715  0.05151016  0.10913091  1.        ]]\n",
-      "[[1.         0.40860882 0.37872461 0.19889243]\n",
-      " [0.40860882 1.         0.16271006 0.19446945]\n",
-      " [0.37872461 0.16271006 1.         0.16870395]\n",
-      " [0.19889243 0.19446945 0.16870395 1.        ]]\n"
+      "[[1.         0.12806569 0.23815364 0.00887715]\n",
+      " [0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.        ]]\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n"
      ]
     }
    ],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -345,13 +345,188 @@
        "array([ 0.12765282,  0.07870291,  0.02757861, -0.0333552 ])"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "E_hat[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[0.00898283],\n",
+       "        [0.0207307 ],\n",
+       "        [0.01658256],\n",
+       "        [0.00986473]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mu_vector = []\n",
+    "for i in df.keys():\n",
+    "    if i in ['gm', 'adbe', 'ora', 'flo']:\n",
+    "        mu_vector.append(df[i].mean())\n",
+    "mu_vector = np.matrix(mu_vector)\n",
+    "mu_vector = np.transpose(mu_vector)\n",
+    "mu_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mb/s55_rmmx4gq6kyms8tszjclh0000gn/T/ipykernel_30728/2450887190.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dcov['gm'][i] = dcov['gm'][i] - mu_vector[0]\n",
+      "/var/folders/mb/s55_rmmx4gq6kyms8tszjclh0000gn/T/ipykernel_30728/2450887190.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dcov['adbe'][i] = dcov['adbe'][i] - mu_vector[1]\n",
+      "/var/folders/mb/s55_rmmx4gq6kyms8tszjclh0000gn/T/ipykernel_30728/2450887190.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dcov['ora'][i] = dcov['ora'][i] - mu_vector[2]\n",
+      "/var/folders/mb/s55_rmmx4gq6kyms8tszjclh0000gn/T/ipykernel_30728/2450887190.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dcov['flo'][i] = dcov['flo'][i] - mu_vector[3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dcov = df.copy()\n",
+    "for i in range(len(dcov)):\n",
+    "    dcov['gm'][i] = dcov['gm'][i] - mu_vector[0]\n",
+    "    dcov['adbe'][i] = dcov['adbe'][i] - mu_vector[1]\n",
+    "    dcov['ora'][i] = dcov['ora'][i] - mu_vector[2]\n",
+    "    dcov['flo'][i] = dcov['flo'][i] - mu_vector[3]\n",
+    "cov_matrix_r = np.zeros((4,4))\n",
+    "i = 0\n",
+    "for l in dcov.keys():\n",
+    "    if l in ['gm', 'adbe', 'ora', 'flo']:\n",
+    "        cov_matrix_r[i][0] = dcov[l].cov(dcov['gm'])\n",
+    "        cov_matrix_r[i][1] = dcov[l].cov(dcov['adbe'])\n",
+    "        cov_matrix_r[i][2] = dcov[l].cov(dcov['ora'])\n",
+    "        cov_matrix_r[i][3] = dcov[l].cov(dcov['flo'])\n",
+    "        i += 1\n",
+    "\n",
+    "sample = {'':['gm', 'adbe', 'ora', 'flo'], 'gm':[], 'adbe':[], 'ora':[], 'flo':[]}\n",
+    "v = cov_matrix_r\n",
+    "for i in range(len(v)):\n",
+    "    sample['gm'].append(v[i][0])\n",
+    "    sample['adbe'].append(v[i][1])\n",
+    "    sample['ora'].append(v[i][2])\n",
+    "    sample['flo'].append(v[i][3])\n",
+    "sample = pd.DataFrame.from_dict(sample)\n",
+    "sample_Sigma = sample.set_index('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            gm      adbe       ora       flo\n",
+      "                                            \n",
+      "gm    0.007876  0.002681  0.002713  0.001195\n",
+      "adbe  0.002681  0.005464  0.000971  0.000973\n",
+      "ora   0.002713  0.000971  0.006517  0.000922\n",
+      "flo   0.001195  0.000973  0.000922  0.004584\n"
+     ]
+    }
+   ],
+   "source": [
+    "#covariance matrix\n",
+    "print(sample_Sigma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0117254  0.00341266 0.00420309 0.00509989]\n",
+      "[[ 0.71899768  0.55471646  0.37986395  0.17616857]\n",
+      " [ 0.42234415 -0.69509997 -0.05303146  0.57935232]\n",
+      " [ 0.49612657 -0.35359037 -0.05585857 -0.79101965]\n",
+      " [ 0.24192184  0.28999919 -0.92183017  0.08719764]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "e_vals, e_vectors = np.linalg.eig(cov_matrix_r)\n",
+    "print(e_vals)\n",
+    "print(e_vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.0117254 , 0.00341266, 0.00420309, 0.00509989])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e_vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6884032277509733"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(e_vals[0]+e_vals[3])/e_vals.sum()"
    ]
   },
   {
@@ -363,9 +538,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+  },
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
-   "language": "python",
+   "display_name": "Python 3.10.8 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -378,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
